-Fix align of Kyle card. -Begin development on skill.

--- a/bootstrap-example_files/cover.css
+++ b/bootstrap-example_files/cover.css
@@ -26,7 +26,7 @@ a:hover {
 
 html,
 body {
-  height: 100%;
+  /*height: 100%; */
   background-color: #333;
 }
 
@@ -111,22 +111,23 @@ body {
 /* Begin Custom CSS */
 
 .card-image-top{
-    max-width: 300px;
-    max-height: 300px;
-    height: auto;
-    width: auto;
+    width: 100%;
+    height: 100%;
 }
 
 .card {
-    overflow: hidden;
-    max-width: 300px;
-    max-height: 500px;
+ max-width: 500px;
+}
+
+.card-body {
+
     height:auto;
+    overflow-y: scroll;
 }
 
 .card-text {
     width: auto;
     font-size:0.9rem;
-    word-wrap: break-word;
-    text-align: left
+    text-align: left;
+
 }
